nullaway_error_6B2731D4-894D-4919-BBC0-62CDE5AB38BF.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/resource/ResourceUrlProvider.java:244: error: [NullAway] dereferenced expression handler is @Nullable
				ResourceResolverChain chain = new DefaultResourceResolverChain(handler.getResourceResolvers());
				                                                                      ^
    (see http://t.uber.com/nullaway )
